# VibeFlow

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: build-windows.yml  release.yml
scripts/: setup-windows.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: audio.rs  commands.rs  inference.rs  llm.rs  os_integration.rs  state.rs
tests/: integration_test.rs
ui/: package-lock.json  package.json  useTheme.js
ui/src/: App.vue  style.css
ui/src/components/: AudioVisualizer.vue  Dashboard.vue  Overlay.vue  Settings.vue  Wizard.vue
