[package]
name = "vibeflow"
version = "0.2.2"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
hound = "3.5"
enigo = "0.1"
rdev = "0.5"
rodio = "0.17"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.4"
active-win-pos-rs = "0.8"
parking_lot = "0.12"
crossbeam = "0.8"
tray-icon = "0.14"
tao = "0.28"
notify-rust = "4"
webrtc-vad = "0.4"
rubato = "0.14"
once_cell = "1.18"
lazy_static = "1.4"
zeroize = { version = "1.7", features = ["derive"] } # Security: Memory zeroing
sysinfo = "0.30" # Monitoring: CPU/RAM usage
eframe = "0.28" # GUI Framework
egui = "0.28"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
